--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "audio-loader": "^1.0.3",
     "audio-play": "^2.3.1",
     "core-js": "^3.6.5",
+    "electron-store": "^8.0.0",
     "music-metadata": "^7.8.4",
     "sound-play": "^1.1.0",
     "speaker": "^0.5.3",
